# oath-markets

./: .gitignore  .vercelignore  README.md  codama-oath.json  codama.json  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
anchor/: Anchor.toml
anchor/programs/oath/: Cargo.toml
anchor/programs/oath/src/: errors.rs  events.rs  lib.rs  logic.rs  state.rs  tests.rs
app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  sw.ts  twitter-image.tsx
app/components/: activity-ticker.tsx  arena-sidebar.tsx  believers-list.tsx  challenge-modal.tsx  cheer-wall.tsx  cluster-select.tsx  commitment-card.tsx  commitment-surface-client.tsx  create-wizard.tsx  dashboard-client.tsx  explore-client.tsx  feed-client.tsx  follow-button.tsx  grid-background.tsx  install-prompt.tsx  leaderboard.tsx  profile-surface-client.tsx  proof-reaction-strip.tsx  providers.tsx  public-page-shell.tsx  site-footer.tsx  site-header.tsx  theme-toggle.tsx  vault-card.tsx  wallet-button.tsx  world-id-verification-field.tsx
app/create/: page.tsx
app/dashboard/: page.tsx
app/explore/: page.tsx
app/feed/: page.tsx
app/lib/: coach-ai.ts  coach-tone.ts  errors.ts  helius-sync.ts  oath-access.ts  oath-data.ts  oath-program.ts  oath-resolve.ts  oath-server.ts  oath-write.ts  preview-session.tsx  preview-wallet.ts  prisma.ts  private-key.ts  private-share.ts  (+7 more)
prisma/: schema.prisma  seed.ts
public/: manifest.webmanifest
scripts/: debug-create-commitment.ts  deploy-devnet.ts  devnet-resolve-smoke.ts  devnet-smoke.ts  generate-icons.mjs  load-env.ts
(+82 files in other folders)
